Add bootstrap4 for github pages

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -10,6 +10,14 @@ $accent-color: #7BBABF;
 
 @import "basically-basic";
 
+@import "variables";
+
+@import "bootstrap/scss/bootstrap";
+
+.content {
+  font-size: $custom-font-size;
+}
+
 .intro-title {
   display: none;
 }
