Set portfolio, about pages

--- a/assets/cv.scss
+++ b/assets/cv.scss
@@ -1,15 +1,19 @@
 ---
 ---
+#main {
+  margin-top: -40px;
+}
+
 #main h2, h3, h4, h5 {
   color: #000 !important;
 }
 
-.container{
+.container-cv {
   background-color: #B1D0FF;
   margin: 50px 0;
 }
 
-.header{
+.header {
   padding: 50px 50px 20px;
 }
 
@@ -17,7 +21,7 @@
   color: #fff;
 }
 
-.bg-brown {
+.bg-dark-green {
   background-color: #1C2416;
 }
 
@@ -46,6 +50,7 @@
 .name{
   font-size: 40px;
   margin-bottom: 0;
+  padding-bottom: 5px;
   color: white !important;
 }
 
