--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -7,20 +7,8 @@ layout: default
 
 <main id="main" class="page-content" aria-label="Content">
   <div class="index inner">
-    <div>{{ content }}</div>
-    <div>
-      <div class="entries">
-        {% include cv/basics.html %}
-        {% include cv/work.html %}
-        {% include cv/volunteer.html %}
-        {% include cv/education.html %}
-        {% include cv/awards.html %}
-        {% include cv/publications.html %}
-        {% include cv/skills.html %}
-        {% include cv/languages.html %}
-        {% include cv/interests.html %}
-        {% include cv/references.html %}
-      </div>
+
+    <div>{{ content }}
     </div>
 
     {% include footer.html %}
