--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,30 +1,62 @@
 ---
 layout: default
 ---
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
 
-{% include page-intro.html %}
+    <div class="container bottom-container">
+      <h1 class="text-center name">Matthew Rider</h1>
 
-<main id="main" class="page-content" aria-label="Content">
-  <div class="index inner">
-    <div>{{ content }}</div>
+      <div class="container">
+        <h2>Ruby on Rails Projects:</h2>
+        <div class="row bg-containers">
+          <div class="col-sm-6">
+            <a href="https://github.com/mattwr18/missmoo-website-rails" target="_blank">
+              <img class="img-fluid" src="https://s14.postimg.org/3pqo5xtup/missmoo-website-rails-img.png" alt="Picture of MissMoo Website Rails homepage" />
+            </a>
+          </div>
 
-    <div>
-      <header class="section-title">
-        <h2>{{ site.data.theme.t.posts | default: 'Posts' }}{% if paginator.page > 1 %}{{ site.data.theme.t.page | default: 'Page' | prepend: ' - ' | append: ' ' }}{{ paginator.page }} {{ site.data.theme.t.of | default: 'of' }} {{ paginator.total_pages }}{% endif %}</h2>
-      </header>
-      <div class="entries">
-        {% if site.plugins contains 'jekyll-paginate' and page.paginate or site.gems contains 'jekyll-paginate' and page.paginate %}
-          {% comment %}
-            Add paginator.posts loop if jekyll-paginate plugin is enabled
-            and page.paginate == true
-          {% endcomment %}
-          {% include posts-paginated.html %}
-        {% else %}
-          {% include posts-all.html %}
-        {% endif %}
+          <div class="col-sm-6">
+            <a href="https://rails-first-app-overtime.herokuapp.com" target="_blank"><img class="img-fluid" src="https://s14.postimg.org/n6bdsumi9/overtime-rails-img.png" alt="Picture of MissMoo leites vegetais web page" /></a>
+          </div>
+        </div>
       </div>
-    </div>
 
-    {% include footer.html %}
-  </div>
-</main>
+      <div class="container">
+        <h2>JavaScript:</h2>
+        <div class="row bg-containers">
+          <div class="col-sm-6">
+            <a href="https://codepen.io/mattwr18/pen/WOZaaQ" target="_blank"> <img class="img-fluid" src="https://s26.postimg.org/uledx0fmh/quote-machine.png" alt="Screenshot of Github page, mechanize organics project" />
+            </a>
+          </div>
+          <div class="col-sm-6">
+            <a href="https://mattwr18.github.io/missmoo-program/" target="_blank">
+              <img class="img-fluid" src="https://s26.postimg.org/krx6k7di1/missmoo-program.png" alt="Screenshot of Github page, stock and profit manager project" />
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <h2>HTML, CSS, Bootstrap:</h2>
+        <div class="row bg-containers">
+          <div class="col-sm-6">
+            <a href="https://codepen.io/mattwr18/pen/WONZwd" target="_blank">
+              <img class="img-fluid" src="https://s13.postimg.org/wip8loluv/Malcolm_X-tribute.png" alt="Picture of Malcolm X tribute web page" />
+            </a>
+          </div>
+          <div class="col-sm-6">
+            <a href="https://codepen.io/mattwr18/pen/Ogyevx" target="_blank"><img class="img-fluid" src="https://s18.postimg.org/6bv61y3ux/missmoo-site.png" alt="Picture of MissMoo leites vegetais web page" /></a>
+          </div>
+        </div>
+      </div>
+     </div>
+<script src="{{'/node_modules/jquery/dist/jquery.min.js' | prepend: site.baseurl}}"></script>
+<script src="{{'/node_modules/popper.js/dist/popper.min.js' | prepend: site.baseurl}}"></script>
+<script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js' | prepend: site.baseurl}}"></script>
+</body>
+</html>
